--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="navbar-brand col-md-3">
             <img
               src="./assets/logo.svg"
-              class="img-fluid d-none d-lg-inline-flex"
+              class="img-fluid d-none d-lg-inline-flex logo1"
             />
           </div>
           <button
@@ -35,7 +35,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <img src="./assets/logo.svg" class="img-fluid logo" />
+            <img src="./assets/logo.svg" class="img-fluid logo1" />
           </button>
 
           <div
